--- a/template/base-hot/index.html
+++ b/template/base-hot/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>devserver</title>
+    <title>{{name}}</title>
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <h1>hello world</h1>
   </body>
 </html>
